# libcamera-go

./: CMakeLists.txt  camera.go  camera_wrapper.h  go.mod  main.cpp  main.go
.github/workflows/: build-app.yml  build-opencv.yml
backup/: camera_wrapper.cpp
backup/.github/workflows/: build-app.yml
backup/scripts/: build-app-static-opencv.sh  build-app-static-raw.sh  build-opencv-static.sh
scripts/: build-app-local.sh  build-app-static-opencv copy.sh  build-app-static-opencv.sh  build-opencv-static.sh
